--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "build": "tsc --build ./tsconfig.json",
     "build.watch": "tsc --build --watch ./tsconfig.json",
-    "schedule-workflow": "node ./lib/starter",
-    "test": "mocha ./lib/test/*.test.js",
-    "worker": "node ./lib/worker"
+    "start": "node ./lib/worker",
+    "start.watch": "nodemon ./lib/worker",
+    "test": "mocha ./lib/test/*.test.js"
   },
   "name": "temporal-hello-world",
   "dependencies": {
@@ -16,6 +16,7 @@
     "@tsconfig/node16": "^1.0.0",
     "@types/mocha": "9.0.0",
     "mocha": "9.1.2",
+    "nodemon": "^2.0.12",
     "typescript": "^4.4.2"
   }
 }
