--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "name": "temporal-hello-world",
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "mailgun-js": "^0.22.0",
     "temporalio": "0.11.x"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.0",
+    "@types/mailgun-js": "0.22.12",
     "@types/mocha": "9.0.0",
+    "@types/sinon": "10.0.4",
     "mocha": "9.1.2",
     "nodemon": "^2.0.12",
+    "sinon": "11.1.2",
     "typescript": "^4.4.2"
   }
 }
