--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "name": "temporal-hello-world",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "express": "4.x",
     "mailgun-js": "^0.22.0",
     "temporalio": "0.11.x"
   },
   "devDependencies": {
+    "@awaitjs/express": "0.8.0",
     "@tsconfig/node16": "^1.0.0",
+    "@types/express": "4.17.13",
     "@types/mailgun-js": "0.22.12",
     "@types/mocha": "9.0.0",
     "@types/sinon": "10.0.4",
+    "axios": "0.23.0",
     "mocha": "9.1.2",
     "nodemon": "^2.0.12",
     "sinon": "11.1.2",
