--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^10.0.0",
     "express": "4.x",
     "mailgun-js": "^0.22.0",
-    "temporalio": "0.16.x"
+    "temporalio": "0.16.x",
+    "uuid": "8.x"
   },
   "devDependencies": {
     "@awaitjs/express": "0.8.0",
@@ -22,6 +23,7 @@
     "@types/mailgun-js": "0.22.12",
     "@types/mocha": "9.0.0",
     "@types/sinon": "10.0.4",
+    "@types/uuid": "8.x",
     "axios": "0.23.0",
     "mocha": "9.1.2",
     "nodemon": "^2.0.12",
