--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "4.x",
-    "fp-ts": "2.11.8",
     "mailgun-js": "^0.22.0",
-    "io-ts": "2.2.16",
+    "runtypes": "6.5.1",
     "temporal-rest": "0.2.0",
     "temporalio": "0.17.x",
     "uuid": "8.x"
